# api/controllers/users_id_favorites.js
@@ -9,14 +9,34 @@ module.exports = {
   postUsersIdFavorites: postUsersIdFavorites
 };
 
+
 function getUsersIdFavorites(req, res) {
 
-
+  knex('favorites')
+    .where('users_id', req.swagger.params.users_id.value)
+    .andWhere('id', req.swagger.params.id.value)
+    .select('*')
+    .then((result) => {
+      res.send(result);
+    })
+    .catch((err) => {
+      next();
+    });
 
 }
 
 function postUsersIdFavorites(req, res) {
 
-
+  knex('favorites')
+    .insert({
+      users_id: req.swagger.params.users_id.value,
+      routines_id: req.swagger.params.id.value
+    })
+    .then((result) => {
+      res.send(result);
+    })
+    .catch((err) => {
+      next();
+    });
 
 }
