# api/controllers/users_id_routines.js
@@ -6,31 +6,35 @@ const knex = require('../../knex');
 
 module.exports = {
   getUsersIdRoutines: getUsersIdRoutines,
-  postUsersIdRoutines: postUsersIdRoutines,
-  patchUsersIdRoutine: patchUsersIdRoutine,
-  deleteUsersIdRoutine: deleteUsersIdRoutine
+  postUsersIdRoutines: postUsersIdRoutines
 };
 
 function getUsersIdRoutines(req, res) {
 
-
-
+  knex('routines')
+    .where('users_id', req.swagger.params.users_id.value)
+    .select('*')
+    .then((result) => {
+      res.send(result);
+    })
+    .catch((err) => {
+      next();
+    });
 }
 
 function postUsersIdRoutines(req, res) {
 
-
-
-}
-
-function patchUsersIdRoutine(req, res) {
-
-
-
-}
-
-function deleteUsersIdRoutine(req, res) {
-
-
+  knex('routines')
+    .insert({
+      users_id: req.swagger.params.users_id.value,
+      routines_id: req.swagger.params.routines_id.value
+    }, '*')
+    .first()
+    .then((result) => {
+      res.send(result);
+    })
+    .catch((err) => {
+      next();
+    });
 
 }
